--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/msn0/vss-sdk-module#readme",
   "devDependencies": {
+    "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
     "webpack": "^1.13.2"
   },
