--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/msn0/vss-sdk-module#readme",
   "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-loader": "^6.2.5",
     "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
     "webpack": "^1.13.2"
