--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.16.0",
     "exports-loader": "^0.6.3",
     "imports-loader": "^0.6.5",
     "webpack": "^1.13.2"
